--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel='stylesheet' href='style.css'>
   <link href='https://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet'>
   <link href='https://fonts.googleapis.com/css?family=Rock+Salt' rel='stylesheet'>
+  <link rel="stylesheet" href="../to-do-or-not/index.css">
 </head>
 <body>
 
